CHANGELOG

2.1.16
UTIL:
* type=address | new 'filter=(name same.as.region.predefined)'
* class UTIL | extend if API mode - with App-id/AV/WF/Threat version info
* type=address | introduce 'filter=(tag is.set)'

BUGFIX:
* class Sub | bugfix for default-securiy-rules | if partial config is already available
* type=address-merger | bugfix to not delete TAG object from upperlevel if TAG object with same name exist at childDG
* type=address/service actions=move | bugfix if group with same name already exist - correctly skip movement
* class PANConf | fix for PHP 8.2
* type=address/service actions=move:shared location=any - bugfix for Firewall config
* type=rule-merger | bugfix to not add description twice, which exceeds description length to >1024
* type=tag actions=delete 'filter=(object is.unused) | bugfix for group-tag used in Rules, reference missing
* introduce GroupTagRulecontainer - to fix type=tag-merger issue if group-tag is used
* class PANConf - bugfix for type=stats on FW config for tmp/ghost object count on 'shared'

GENERAL:
* develop pan-os-php-api | per default enable shadow-json checkbox  - with shadow-nojson, output has a bug and filter are not working correctly - fixing later


2.1.15 (20230830)
UTIL:

BUGFIX:
* type=address/service 'filter=(object is.unused/is.unused.recursive) | overwritten objects used at higher DG level are now also used
* bugfix to create correct XML file Increament for prettyXML - so that it is identical to Panorama / Firewall created config
* README.md - fix broken links

GENERAL:


2.1.14 (20230829)
UTIL:
type=rule actions=display | introduction of argument actions=display:hitcount,ApplicationSeen

BUGFIX:
* type=vendor-migration | general bugfix to use correct baseconfig file if no argument in= is defined
* class AddressGroup | bugfix for missing function type() - related to type=address actions=move
* type=rule location=DG1 'actions=move:DG2,pre' - no rulename change