@@ -5,6 +5,7 @@ UTIL:
 * type=address | new 'filter=(name same.as.region.predefined)'
 * class UTIL | extend if API mode - with App-id/AV/WF/Threat version info
 * type=address | introduce 'filter=(tag is.set)'
+* type=xml-issue | extend with rule tag object validation for twice set the same tag object
 
 BUGFIX:
 * class Sub | bugfix for default-securiy-rules | if partial config is already available
